--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <!-- Hero Content -->
         <div class="relative z-10 container mx-auto px-4 text-center">
             <div class="max-w-4xl mx-auto animate-slide-up">
-                <h2 class="text-5xl md:text-7xl font-bold text-white mb-6 leading-tight drop-shadow-2xl">
+                <h2 class="text-5xl md:text-7xl font-bold text-white mb-6 leading-tight drop-shadow-2xl mt-16">
                     Your Trusted Partner for
                     <span class="bg-gradient-to-r from-secondary-400 to-secondary-600 bg-clip-text text-transparent">
                         Smart Living
@@ -890,5 +890,6 @@
         });
     </script>
 </body>
+
 
 </html>
